# gghead

./: README.md  environment.yml  index.html  pyproject.toml
assets/: flame_template_v2.mtl
notebooks/: inference.ipynb
scripts/: evaluate_fid.py  render_interpolation.py  sample_heads.py  train_gghead.py  visualizer.py
src/gghead/: constants.py  env.py
src/gghead/config/: eg3d_train_arguments.py  gaussian_attribute.py
src/gghead/dataset/: image_folder_dataset.py
src/gghead/eg3d/: loss.py  train_loop.py
src/gghead/model_manager/: base_model_manager.py  finder.py  gghead_model_manager.py
src/gghead/models/: gaussian_discriminator.py  gghead_model.py  stylegan2.py
src/gghead/render_manager/: interpolation_rendering_manager.py
src/gghead/util/: activation.py  logging.py  mesh.py  metrics.py  name_builder.py  rotation.py  uv.py
static/css/: index.css
static/js/: index.js
