[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gghead"
version = "0.0.1"
description = "Official implementation of Siggraph Asia '24 paper 'GGHead: Fast and Generalizable 3D Gaussian Heads'"
authors = [
    { name = "Tobias Kirschstein", email = "tobias.kirschstein@gmail.com" },
]
readme = "README.md"
license = { text = "Apache 2.0" }
requires-python = ">=3.8.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
# urls = { Documentation = "<<<ENTER_LINK_TO_DOCUMENTATION>>>" }
# Main dependencies
dependencies = [
]

[project.optional-dependencies]
dev = [
]

[project.scripts]

[tool.setuptools.packages.find]
where = ["src"]
include = ["gghead*"]  # Keep the '*', otherwise submodules are not found